[package]
name = "tokio-context"
version = "0.1.2"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
description = "Contexts for cancelling asynchronous tasks using tokio"
keywords = ["async", "api", "tokio", "futures"]
categories = ["rust-patterns", "development-tools", "asynchronous"]
repository = "https://github.com/PrismaPhonic/tokio-context"
documentation = "https://docs.rs/tokio-context"
readme = "README.md"
license = "MIT"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tokio = { version = "1.12.0", features = ["macros", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["macros", "sync", "time", "rt", "rt-multi-thread"] }
